frontend/test/should_fail/iterated_query_nested_access_non_self_rhs.grg
rule foo()
{	
	iterated it {
		.;
	---
		def var bar:double = 1;
		
		modify {
		}
	}
	
	alternative {
		caseFoo {
			.;
		---
			
			modify {
			---
				def var score:double = [?it].extract<bar>().sum(); // no acces from nested part allowed
			}
		}
	}
	
	modify {
	}
}
